# mirumon-vk-bot

./: README.md  config.py  main.py  message_handler.py  programs.xlsx  pyproject.toml  response_models.py  setup.cfg  test.py
.github/workflows/: deploy.yml
app/: config.py  main.py
app/resources/: __init__.py  computers_message.mako  programs_message.mako
app/resources/messages/: __init__.py
app/schemas/: computer.py  computers.py  messages.py
app/services/: commands_handler.py  computers.py  excel.py  mirumon_api.py  send_handler.py  utils.py  vk_api.py
scripts/: check-container-version  format  format_script.bat  lint  lint-code  lint-style  test  test-cov-html  test-cov-xml
scripts/powershell/: format.ps1  lint-code.ps1  lint.ps1  test.ps1
