[tool.poetry]
name = "mirumon-vk-bot"
version = "0.1.0"
description = "VK bot for mirumon monitoring service"
authors = ["Opti213 <opti213@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
loguru = "^0.3.2"
uvicorn = "^0.9.0"
aiovk = "^3.0"


[tool.poetry.dev-dependencies]
black = { version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
autoflake = "^1.3"

mypy = "^0.701.0"
wemake-python-styleguide = "^0.12.4"
flake8-fixme = "^1.1"


[tool.black]
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
