[tool.poetry]
name = "mirumon-vk-bot"
version = "0.0.1"
description = ""
authors = ["Leonid <amorilec@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.9.0"
fastapi = "^0.42.0"
vk = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
