[tool.poetry]
name = "mirumon-vk-bot"
version = "0.0.1"
description = ""
authors = ["Leonid <amorilec@yandex.ru>", "Slyfoxy <khitrov34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.9.0"
fastapi = "^0.42.0"
vk = "^2.0"
Mako = "^1.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
autoflake = "^1.3"

wemake-python-styleguide = "^0.12.5"
mypy = "^0.730.0"

pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"

httpx = "^0.7.5"
asgi-lifespan = "^0.4.2"
flake8-fixme = "^1.1"


[tool.black]
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
